<?xml version="1.0"?>
<package format="2">
  <name>sainsmart_relay_usb_demo</name>
  <version>0.1.0</version>
  <description>The sainsmart_relay_usb_demo package</description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>

  <license>BSD</license>

  <test_depend>sainsmart_relay_usb</test_depend>
  <test_depend>rostest</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
